# fitsmaniplib

./: .gitignore  CMakeLists.txt  FITSmanip.c  FITSmanip.h  FITSmanip.pc.in  FITSmaniplib.creator.user.4.8-pre1  README.md  fileops.c  fits.c  fitsfiles.c  fitsimages.c  fitskeywords.c  fitstables.c  histogram.c  local.h  median.c  types.h
examples/: CMakeLists.txt  Readme.md  common.h  fitsstat.c  gd.c  imstat.c  keylist.c  listtable.c  med.c
locale/ru/: messages.po  ru.po
locale/ru/LC_MESSAGES/: FITSmanip.mo
